# Godot-SpacetimeDB-SDK

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/: gdscript-formatter-disable  settings.json
.claude/agents/: 03_gdscript-reviewer.md
.claude/hooks/: pre-commit-check.sh  precompact-handoff.sh  sessionstart-handoff.sh
.claude/rules/: gdscript-pitfalls.md
.githooks/: pre-push
.github/: FUNDING.yml
.github/workflows/: benches.yml  release.yml  tests.yml
blackholio-server/: Cargo.toml  NOTICE  README.md
blackholio-server/src/: lib.rs
docs/: README.md  api.md  codegen.md  design-decisions.md  installation.md  performance.md  quickstart.md  spacetimeauth-godotsteam.md  upstream-proposal.md  wire-coverage.md
docs/migrations/: 1.0.md  1.3.md
godot-client/: EXAMPLE.md  bench_load.gd  bench_measure.gd  main.gd  main.tscn  micro_bench.gd  micro_bench.gd.uid  project.godot  run_tests.sh
godot-client/benchmark/: README.md  bench_load.gd  bench_load.gd.uid  bench_measure.gd  bench_measure.gd.uid  capture_workload.gd  capture_workload.gd.uid  micro_bench.gd  profile_deser.gd  profile_deser.gd.uid  replay_workload.gd  replay_workload.gd.uid
godot-client/example_code/: LobbyHolder.gd  integration_tests.gd  lobby_holder.gd  mouse.gd  (+3 more)
integration-tests/: README.md  verify_live.gd  verify_live2.gd  verify_live_enum.gd  verify_live_pkless.gd  verify_live_reconnect.gd  verify_live_result.gd
integration-tests/verify_types_module/: Cargo.toml
integration-tests/verify_types_module/src/: lib.rs
test-server-module/: .gitignore  Cargo.toml
(+527 files in other folders)
