[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Put this in an empty workspace. This is required because we're nested under the SpacetimeDB root
# dir, which has its own workspace `Cargo.toml`, and this shouldn't think it's a part of that.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pin a released crate version (matches the tested SpacetimeDB CLI) rather than
# git master, which tracks SpacetimeDB main and can break against a released server.
spacetimedb = "2.5.0"
log = "0.4"
rand = "0.8.5"
